--- a/src/style/breakpoints.scss
+++ b/src/style/breakpoints.scss
@@ -1,5 +1,8 @@
 /** Mobile **/
 $xsm: 480px;
 
+/** Tablet small **/
+$xs: 927px;
+
 /** Tablet **/
 $sm: 1368px;
